# SlackMS

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: bridge.rs  encryption.rs  logging.rs  main.rs
